# wingman

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CURL-release-x86_64-data.cmake  README.md  ROADMAP.md  ZLIB-release-x86_64-data.cmake  bootstrap.ps1  build.sh  build_configure.bat  build_configure.ps1  codecov.yml  conanfile.txt  configure.bat  fmt-release-x86_64-data.cmake  macOS_SESSION_SUMMARY.md  macOS_VERIFICATION_REPORT.md  setup.bat  setup_vcpkg.ps1  todo.md  vcpkg.json  wingman.db
agent/: CMakeLists.txt
agent/config/: agent.toml
agent/include/wingman/agent/: active_mode.hpp  agent.hpp  config.hpp  passive_mode.hpp  standalone_mode.hpp
agent/src/: active_mode.cpp  agent.cpp  agent_config.cpp  main.cpp  passive_mode.cpp  standalone_mode.cpp
apps/cli/: CMakeLists.txt  wingman-cli.cpp
apps/client/: CMakeLists.txt
apps/client/src/: active_mode.cpp  agent.cpp  agent_config.cpp  main.cpp  packer.cpp  passive_mode.cpp  resource_loader.cpp  standalone_mode.cpp
apps/client/src/commands/: build_command.cpp  serve_command.cpp
apps/client/src/controllers/: api.cpp  system.cpp  websocket.cpp
apps/client/src/gui/: app.cpp  config.cpp  file_dialog.cpp  imgui_backend.cpp  spdlog_sink.cpp
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/icons/: README.md  icon.icns
apps/gui/src-tauri/src/: hotkeys.rs  main.rs  models.rs  state.rs  tray.rs
apps/inspector/src-tauri/: Cargo.toml  tauri.conf.json
apps/inspector/src-tauri/src/: main.rs
apps/runtime/: CMakeLists.txt
apps/runtime/config/: agent.toml  client.toml  config.json.example
apps/runtime/src/: active_mode.cpp  agent.cpp  agent_config.cpp  cli.cpp  event_buffer.cpp  local_ipc_server.cpp  main.cpp  packer.cpp  passive_mode.cpp  remote_client.cpp  remote_server.cpp  resource_loader.cpp  runtime_context.cpp  standalone_mode.cpp
apps/runtime/src/commands/: build_command.cpp  script_command.cpp  serve_command.cpp  start_command.cpp  stop_command.cpp
apps/runtime/src/controllers/: api.cpp  script.cpp  system.cpp  websocket.cpp
apps/runtime/tests/: CMakeLists.txt  cli_test.cpp  cli_test_stubs.cpp  screen_runtime_test.cpp
client/tests/: CMakeLists.txt
lib/wingman/: CMakeLists.txt
lib/wingman/include/wingman/: accounts.hpp  behavior_tree.hpp  clipboard.hpp  config.hpp  core.hpp  crypt.hpp  event.hpp  filewatcher.hpp  game_profile.hpp  http.hpp  http_server.hpp  human.hpp  input.hpp  json.hpp  kvstore.hpp  lua_http.hpp  ml.hpp  node_status.hpp  ocr.hpp  performance.hpp  process.hpp  qrcode.hpp  recorder.hpp  remote_server.hpp  screen.hpp  screenshot_reporter.hpp  (+12 more)
lib/wingman/src/: accounts.cpp  behavior_tree.cpp  clipboard.cpp  config.cpp  crypt.cpp  event.cpp  filewatcher.cpp  game_profile.cpp  http.cpp  http_server.cpp  human.cpp  input.cpp  json.cpp  kvstore.cpp  ml.cpp  ml_stub.cpp  node_status.cpp  ocr.cpp  ocr_stub.cpp  performance.cpp  process.cpp  qrcode.cpp  recorder.cpp  remote_server.cpp  screen.cpp  screenshot_reporter.cpp  script_manager.cpp  security.cpp  smart_trigger.cpp  storage.cpp  storage_remote.cpp  system.cpp  tray.cpp  trigger.cpp  trigger_engine.cpp  ui_automation.cpp  verification.cpp  vision.cpp  vision_stub.cpp  window.cpp
lib/wingman/tests/: CMakeLists.txt  accounts_test.cpp  behavior_tree_test.cpp  clipboard_test.cpp  component_test.cpp  config_test.cpp  db_module_test.cpp  event_bus_test.cpp  event_module_test.cpp  event_test.cpp  extra_modules_test.cpp  filewatcher_test.cpp  fsm_module_test.cpp  game_profile_io_test.cpp  game_profile_test.cpp  http_test.cpp  human_test.cpp  image_analyzer_test.cpp  ini_module_test.cpp  input_test.cpp  ipc_factory_test.cpp  ipc_test.cpp  json_test.cpp  kvstore_test.cpp  ml_test.cpp  node_status_test.cpp  notify_module_test.cpp  ocr_test.cpp  performance_test.cpp  qrcode_test.cpp  recorder_test.cpp  remote_server_test.cpp  screen_test.cpp  script_function_test.cpp  script_manager_test.cpp  script_modules_test.cpp  security_test.cpp  smart_trigger_test.cpp  storage_test.cpp  task_module_test.cpp  (+8 more)
libs/core/tests/: CMakeLists.txt
libs/debug/: CMakeLists.txt
libs/debug/src/: emmy_adapter.cpp
libs/debug/tests/: CMakeLists.txt  debug_test.cpp
libs/lua/: CMakeLists.txt
libs/lua/src/: lua_bindings.cpp  lua_engine.cpp  lua_marshal.cpp  lua_script_engine.cpp  script_manager.cpp
libs/lua/tests/: .busted  CMakeLists.txt  lua_test.cpp
libs/proto/: CMakeLists.txt
libs/proto/tests/: CMakeLists.txt  proto_test.cpp
libs/python/: CMakeLists.txt
libs/python/src/: python_marshal.cpp  python_script_engine.cpp
libs/python/tests/: CMakeLists.txt  python_name_conversion_test.cpp
libs/transport/: CMakeLists.txt
libs/transport/src/: simple_protocol.cpp  stream_channel.cpp  stream_manager.cpp  transport_client.cpp  transport_server.cpp
libs/transport/tests/: CMakeLists.txt  simple_protocol_test.cpp  transport_test.cpp
libs/wingman-core/: CMakeLists.txt
libs/wingman-core/src/: behavior_tree.cpp  config.cpp  http.cpp  ml_stub.cpp  performance.cpp  recorder.cpp  screen.cpp  system.cpp  tray.cpp
libs/wingman-transport/: CMakeLists.txt  README.md
libs/wingman-transport/src/: message_handler.cpp  tcp_client.cpp  tcp_server.cpp  transport_client.cpp  transport_server.cpp
test3/: CMakeLists.txt
tests/build4/: CMakeLists.txt  CTestTestfile.cmake  minimal_tests[1]_include.cmake
tests/build5/: CMakeLists.txt
tests/cpp/: CMakeLists.minimal.txt  CMakeLists.txt  accounts_test.cpp  auth_test.cpp  behavior_tree_test.cpp  config_test.cpp  game_profile_test.cpp  http_test.cpp  human_test.cpp  input_test.cpp  json_test.cpp  kvstore_test.cpp  lua_http_test.cpp  ml_test.cpp  node_status_test.cpp  ocr_test.cpp  performance_test.cpp  process_test.cpp  qrcode_test.cpp  recorder_test.cpp  screen_test.cpp  simple_test.cpp  smart_trigger_test.cpp  storage_test.cpp  system_test.cpp  test_main.cpp  tray_test.cpp  trigger_test.cpp  ui_automation_test.cpp  verification_test.cpp  version_test.cpp  vision_test.cpp  window_test.cpp
tools/wingman-lab/: CMakeLists.txt
(+1300 files in other folders)
